# molecular-materials-modelling-public

./: .buildinfo  LICENSE-CODE  LICENSE-CONTENT  README.md  genindex.html  index.html  objects.inv  pyproject.toml  references.bib  requirements.txt  robots.txt  search.html  searchindex.js  sitemap.xml
_downloads/c608309afda93466f8a51003043893b1/: lj38-optimization.xyz
_sources/notebooks/00-front-matter/: preface.md
_sources/notebooks/01-monte-carlo-methods/: index.md  ising-model.ipynb
_sources/notebooks/02-energy-landscapes/: index.md
_sources/notebooks/03-molecular-dynamics/: lennard-jones-md.ipynb  (+1 more)
_static/: ecp.css  home-button.js
ecp/: __init__.py  animate.py  draw.py  ecp.mplstyle  style.py  validate.py
notebooks/00-front-matter/: preface.html  preface.md
notebooks/01-monte-carlo-methods/: index.html  ising-model.html  ising-model.ipynb
notebooks/02-energy-landscapes/: index.html
notebooks/03-molecular-dynamics/: index.html  index.md  lennard-jones-md.html  lennard-jones-md.ipynb  replica-exchange.html  replica-exchange.ipynb
notebooks/04-electronic-structure/: index.html  oxygen-triplet.html  oxygen-triplet.ipynb  silicon-band-structure.html  silicon-band-structure.ipynb
notebooks/05-crystals-surfaces/: equation-of-state.html  equation-of-state.ipynb  hydrocarbons-on-platinum.html  hydrocarbons-on-platinum.ipynb  index.html
notebooks/06-reactions-free-energy/: ethanol-dehydration.html  ethanol-dehydration.ipynb  index.html  metadynamics-graphene.html  metadynamics-graphene.ipynb  neb-chloromethane.html  neb-chloromethane.ipynb
(+22 files in other folders)
